cmake_minimum_required(VERSION 3.8)

include(catch2.cmake)

add_subdirectory(cpp/bitset-1)
add_subdirectory(cpp/attribute-parser/)
add_subdirectory(cpp/lc-stock-array-ii/)
add_subdirectory(cpp/lc-tree-level-order/)
add_subdirectory(cpp/lc-sorted-to-tree/)
add_subdirectory(cpp/lc-first-bad-version/)
add_subdirectory(cpp/lc-merge-sorted/)
add_subdirectory(cpp/lc-pascal-triangle/)
add_subdirectory(cpp/lc-valid-parentheses/)
add_subdirectory(cpp/lc-linked-list-cycle/)
add_subdirectory(cpp/lc-delete-ll-node/)
add_subdirectory(cpp/lc-rotate-array/)
add_subdirectory(cpp/lc-contains-duplicate/)
add_subdirectory(cpp/lc-single-number/)
add_subdirectory(cpp/lc-array-intersect/)
add_subdirectory(cpp/lc-array-move-zeroes/)
add_subdirectory(cpp/lc-two-sum/)
add_subdirectory(cpp/lc-rotate-matrix/)
add_subdirectory(cpp/lc-linked-list-palindrome/)
add_subdirectory(cpp/lc-linked-list-remove-nth-from-end/)
add_subdirectory(cpp/lc-string-reverse-int/)

