cmake_minimum_required(VERSION 3.8)

include(catch2.cmake)

add_subdirectory(cpp/attribute-parser/)
add_subdirectory(cpp/bitset-1)
add_subdirectory(cpp/lc-array-intersect/)
add_subdirectory(cpp/lc-array-move-zeroes/)
add_subdirectory(cpp/lc-contains-duplicate/)
add_subdirectory(cpp/lc-delete-ll-node/)
add_subdirectory(cpp/lc-first-bad-version/)
add_subdirectory(cpp/lc-group-anagrams/)
add_subdirectory(cpp/lc-increasing-triplet-subsequence/)
add_subdirectory(cpp/lc-linked-list-add-two-numbers/)
add_subdirectory(cpp/lc-linked-list-cycle/)
add_subdirectory(cpp/lc-linked-list-intersection/)
add_subdirectory(cpp/lc-linked-list-merge-sorted/)
add_subdirectory(cpp/lc-linked-list-odd-even/)
add_subdirectory(cpp/lc-linked-list-palindrome/)
add_subdirectory(cpp/lc-linked-list-remove-nth-from-end/)
add_subdirectory(cpp/lc-linked-list-reverse/)
add_subdirectory(cpp/lc-longest-nonrepeat-substring/)
add_subdirectory(cpp/lc-longest-palindromic-substring/)
add_subdirectory(cpp/lc-matrix-zeroes/)
add_subdirectory(cpp/lc-merge-sorted/)
add_subdirectory(cpp/lc-morris-inorder/)
add_subdirectory(cpp/lc-nokia-combo/)
add_subdirectory(cpp/lc-number-of-islands/)
add_subdirectory(cpp/lc-pascal-triangle/)
add_subdirectory(cpp/lc-rotate-array/)
add_subdirectory(cpp/lc-rotate-matrix/)
add_subdirectory(cpp/lc-single-number/)
add_subdirectory(cpp/lc-sorted-to-tree/)
add_subdirectory(cpp/lc-stock-array-ii/)
add_subdirectory(cpp/lc-string-anagram/)
add_subdirectory(cpp/lc-string-count-and-say/)
add_subdirectory(cpp/lc-string-first-unique-char/)
add_subdirectory(cpp/lc-string-longest-common-prefix/)
add_subdirectory(cpp/lc-string-reverse-int/)
add_subdirectory(cpp/lc-string-to-integer/)
add_subdirectory(cpp/lc-string-valid-palindrome/)
add_subdirectory(cpp/lc-three-sum/)
add_subdirectory(cpp/lc-tree-from-preorder-and-inorder/)
add_subdirectory(cpp/lc-tree-kth-smallest-bst/)
add_subdirectory(cpp/lc-tree-level-order/)
add_subdirectory(cpp/lc-tree-next-right/)
add_subdirectory(cpp/lc-tree-zigzag/)
add_subdirectory(cpp/lc-two-sum/)
add_subdirectory(cpp/lc-valid-parentheses/)
